# DeepTrap

./: .gitignore  LICENSE  README.md  README_zh.md  SKILL.md  benchmark.py  pyproject.toml
data/: tasks.jsonl
docs/: index.html
huggingface/: README.md
scripts/: export_hf_dataset.py  lib_agent.py  lib_criteria.py  lib_dashscope.py  lib_deepseek.py  lib_llm.py  lib_openrouter.py  lib_reward.py  lib_tasks.py
tasks/: task_R1_T01.md  task_R1_T02.md  task_R1_T03.md  task_R1_T04.md  task_R1_T05.md  task_R1_T06.md  task_R1_T07.md  task_R2_T01.md  task_R2_T02.md  task_R2_T03.md  task_R2_T04.md  task_R2_T05.md  task_R2_T06.md  task_R2_T07.md  task_R3_T01.md  task_R3_T02.md  task_R3_T03.md  task_R3_T04.md  task_R3_T05.md  task_R3_T06.md  task_R3_T07.md  task_R4_T01.md  task_R4_T02.md  task_R4_T03.md  task_R4_T04.md  task_R4_T05.md  task_R4_T06.md  task_R4_T07.md  task_R5_T01.md  task_R5_T02.md  task_R5_T03.md  task_R5_T04.md  task_R5_T05.md  task_R5_T06.md  task_R5_T07.md  task_R6_T01.md  task_R6_T02.md  task_R6_T03.md  task_R6_T04.md  task_R6_T05.md  (+2 more)
tests/: test_public_benchmark.py
